Make sure long names on feed page don't wrap

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -101,6 +101,7 @@ footer {
 
 .user-list .profile-info .profile-name {
   text-align: center;
+  white-space: nowrap;
 }
 
 .user-search-box {
